fixed relations type and wrote GetMapping for transactions